fixed whitespace issue and clicking on cards/tables takes you to note/notebook pages

--- a/react-vite/src/components/Notebooks/Notebooks.css
+++ b/react-vite/src/components/Notebooks/Notebooks.css
@@ -17,7 +17,7 @@
   height: 50px;
 }
 
-.notebookName {
+.notebookName, .click {
   cursor: pointer;
 }
 
